# hebe

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile  LICENSE  README.md  main.cpp  main.hebe  output_code.ll  prueba
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  tests.yml
include/: compiler.h  logging.h  main.h
include/ast/: assignmentNode.h  ast.h  binaryOpNode.h  nodeType.h  numberNode.h  programNode.h
include/ast/procedure/: procedureBodyNode.h  procedureCallNode.h  procedureNode.h
include/codegen/: codegen.h
include/parser/: parser.h
scripts/: docker-dev.sh
src/: AbstractSyntaxTree.cc  AbstractSyntaxTree.h  CodeGeneration.cc  CodeGeneration.h  JITDriver.cc  JITDriver.h  Lexer.cc  Lexer.h  Parser.cc  Parser.h  compiler.cpp  logging.cpp  main.cpp
src/ast/: ast.cpp  nodeType.cpp
src/codegen/: codegen.cpp
src/codegen/llvm/: JIT.cpp  basicBlock.cpp  initialize.cpp
src/codegen/numbers/: numbers.cpp
src/codegen/operations/: binaryOperations.cpp
src/codegen/procedures/: llvmUtils.cpp  procedures.cpp
src/codegen/utils/: IRExport.cpp  visuals.cpp
src/codegen/variables/: assignments.cpp  variables.cpp
src/lexer/flex/: scanner.l
src/parser/: AbstractSyntaxTree.cc  Lexer.cc  Parser.cc  parser.cpp
src/parser/bison/: grammar.y
tests/: main.cpp
tests/compiler/: functions.cpp  parsing.cpp
tests/loggin/: logsys_logger.cpp
